add ingredients controller test(1)