@@ -1,6 +1,5 @@
 package github.ikhvjs.recipes.controller;
 
-import com.fasterxml.jackson.databind.ObjectMapper;
 import github.ikhvjs.recipes.model.Ingredient;
 import github.ikhvjs.recipes.model.Recipe;
 import github.ikhvjs.recipes.service.RecipeService;
@@ -26,7 +25,6 @@ import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.jsonPath;
 
 import java.time.LocalDateTime;
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
@@ -34,7 +32,7 @@ import java.util.Optional;
 @ExtendWith(SpringExtension.class)
 @SpringBootTest
 @AutoConfigureMockMvc
-public class RecipeControllerTest {
+public class RecipeControllerTest extends JsonConverter {
 
     static String mockCurrentDateTimeString = "2022-08-04T10:11:30";
     static LocalDateTime mockCurrentTime = LocalDateTime.parse(mockCurrentDateTimeString);
@@ -48,10 +46,13 @@ public class RecipeControllerTest {
     @Nested
     @DisplayName("GET /recipes/{id}")
     class TestGetRecipeById {
+        final Long mockIngredientId1 = 1L;
 
         final String mockIngredientName1 = "test ingredient 1";
+        final Long mockIngredientId2 = 1L;
+
         final String mockIngredientName2 = "test ingredient 2";
-        final Long mockId = 1L;
+        final Long mockRecipeId = 1L;
         final String mockRecipeName = "test ingredient 1";
         final boolean mockIsVegetarian = true;
         final Short mockNumOfServings = 2;
@@ -59,22 +60,23 @@ public class RecipeControllerTest {
 
         @Test
         @DisplayName("return 200 ok and the recipe if the recipe is found")
-        void testGetRecipeByIdFound() throws Exception {
-
-            List<Ingredient> mockIngredients = Arrays.asList( new Ingredient(mockIngredientName1),new Ingredient(mockIngredientName2));
-            Recipe mockRecipe = new Recipe(mockId, mockRecipeName, mockIsVegetarian,  mockNumOfServings,
+        void testGetRecipeByIdSuccess() throws Exception {
+            List<Ingredient> mockIngredients = List.of(
+                    new Ingredient(mockIngredientId1, mockIngredientName1),
+                    new Ingredient(mockIngredientId2, mockIngredientName2));
+            Recipe mockRecipe = new Recipe(mockRecipeId, mockRecipeName, mockIsVegetarian,  mockNumOfServings,
                     mockInstructions, mockIngredients,  mockCurrentTime);
-            // Set up mocked service
-            doReturn(Optional.of(mockRecipe)).when(service).findById(mockId);
 
-            mockMvc.perform(get("/recipes/{id}", mockId))
+            doReturn(Optional.of(mockRecipe)).when(service).findById(mockRecipeId);
+
+            mockMvc.perform(get("/recipes/{id}", mockRecipeId))
 
                     .andExpect(status().isOk())
                     .andExpect(content().contentType(MediaType.APPLICATION_JSON_VALUE))
 
-                    .andExpect(header().string(HttpHeaders.LOCATION, "/recipe/" + mockId))
+                    .andExpect(header().string(HttpHeaders.LOCATION, "/recipes/" + mockRecipeId))
 
-                    .andExpect(jsonPath("$.id", is(mockId.intValue())))
+                    .andExpect(jsonPath("$.id", is(mockRecipeId.intValue())))
                     .andExpect(jsonPath("$.recipeName", is(mockRecipeName)))
                     .andExpect(jsonPath("$.isVegetarian", is(mockIsVegetarian)))
                     .andExpect(jsonPath("$.numOfServings", is(mockNumOfServings.intValue())))
@@ -88,21 +90,19 @@ public class RecipeControllerTest {
         @Test
         @DisplayName("return 404 error if the recipe is not found")
         void testGetRecipeByIdNotFound() throws Exception {
-            // Set up mocked service
-            doReturn(Optional.empty()).when(service).findById(mockId);
+            doReturn(Optional.empty()).when(service).findById(mockRecipeId);
 
-            mockMvc.perform(get("/recipes/{id}", mockId))
+            mockMvc.perform(get("/recipes/{id}", mockRecipeId))
                     .andExpect(status().isNotFound());
         }
 
         @Test
         @DisplayName("return 500 error if retrieval of recipe failed")
         void testGetRecipeFail() throws Exception {
-            // Set up mocked service
-            doThrow(new RuntimeException()).when(service).findById(mockId);
+            doThrow(new RuntimeException()).when(service).findById(mockRecipeId);
 
-            // Execute our DELETE request
-            mockMvc.perform(get("/recipes/{id}", mockId))
+
+            mockMvc.perform(get("/recipes/{id}", mockRecipeId))
                     .andExpect(status().isInternalServerError());
         }
     }
@@ -110,24 +110,26 @@ public class RecipeControllerTest {
     @Nested
     @DisplayName("POST /recipes")
     class TestCreateRecipe {
+        final Long mockIngredientId1 = 1L;
+        final Long mockIngredientId2 = 2L;
         final String mockIngredientName1 = "test ingredient 1";
         final String mockIngredientName2 = "test ingredient 2";
-        final Long mockId = 1L;
+        final Long mockRecipeId = 1L;
         final String mockRecipeName = "test ingredient 1";
         final boolean mockIsVegetarian = true;
         final Short mockNumOfServings = 2;
         final String mockInstructions = "test 1 instructions";
 
-        List<Ingredient> postIngredients = Arrays.asList( new Ingredient(mockIngredientName1),
-                new Ingredient(mockIngredientName2));
+        List<Ingredient> postIngredients = List.of( new Ingredient(mockIngredientId1, mockIngredientName1),
+                new Ingredient(mockIngredientId2, mockIngredientName2));
         Recipe postRecipe = new Recipe( mockRecipeName, mockIsVegetarian,
                 mockNumOfServings, mockInstructions, postIngredients);
 
-        List<Ingredient> mockIngredients = Arrays.asList(
-                new Ingredient(mockIngredientName1),
-                new Ingredient(mockIngredientName2));
+        List<Ingredient> mockIngredients = List.of(
+                new Ingredient(mockIngredientId1, mockIngredientName1),
+                new Ingredient(mockIngredientId2, mockIngredientName2));
 
-        Recipe mockRecipe = new Recipe(mockId,
+        Recipe mockRecipe = new Recipe(mockRecipeId,
                 mockRecipeName,
                 mockIsVegetarian,
                 mockNumOfServings,
@@ -138,27 +140,26 @@ public class RecipeControllerTest {
         @Test
         @DisplayName("return 200 ok and the recipe if the creation succeeded")
         void testCreateRecipeSuccess() throws Exception {
-
-
-            // Set up mocked service
             doReturn(mockRecipe).when(service).create(any());
 
             mockMvc.perform(post("/recipes")
-                            .contentType(MediaType.APPLICATION_JSON)
+                            .contentType(MediaType.APPLICATION_JSON_VALUE)
                             .content(toJsonString(postRecipe)))
 
                     .andExpect(status().isCreated())
                     .andExpect(content().contentType(MediaType.APPLICATION_JSON_VALUE))
 
-                    .andExpect(header().string(HttpHeaders.LOCATION, "/recipe/"+mockId))
+                    .andExpect(header().string(HttpHeaders.LOCATION, "/recipes/"+ mockRecipeId))
 
-                    .andExpect(jsonPath("$.id", is(mockId.intValue())))
+                    .andExpect(jsonPath("$.id", is(mockRecipeId.intValue())))
                     .andExpect(jsonPath("$.recipeName", is(mockRecipeName)))
                     .andExpect(jsonPath("$.isVegetarian", is(mockIsVegetarian)))
                     .andExpect(jsonPath("$.numOfServings", is(mockNumOfServings.intValue())))
                     .andExpect(jsonPath("$.instructions", is(mockInstructions)))
                     .andExpect(jsonPath("$.ingredients", hasSize(2)))
+                    .andExpect(jsonPath("$.ingredients[0].id", is(mockIngredientId1.intValue())))
                     .andExpect(jsonPath("$.ingredients[0].ingredientName", is(mockIngredientName1)))
+                    .andExpect(jsonPath("$.ingredients[1].id", is(mockIngredientId2.intValue())))
                     .andExpect(jsonPath("$.ingredients[1].ingredientName", is(mockIngredientName2)))
                     .andExpect(jsonPath("$.modifiedTime", is(mockCurrentDateTimeString)));
         }
@@ -167,17 +168,16 @@ public class RecipeControllerTest {
         @DisplayName("return 500 Error if the creation failed")
         void testCreateRecipeBadRequest() throws Exception {
 
-            List<Ingredient> postIngredients = Arrays.asList( new Ingredient(mockIngredientName1),
-                    new Ingredient(mockIngredientName2));
+            List<Ingredient> postIngredients = List.of( new Ingredient(mockIngredientId1, mockIngredientName1),
+                    new Ingredient(mockIngredientId2, mockIngredientName2));
             Recipe postRecipe = new Recipe( mockRecipeName, mockIsVegetarian,
                     mockNumOfServings, mockInstructions, postIngredients);
 
-            // Set up mocked service
             doReturn(mockRecipe).when(service).create(any());
             doThrow(new RuntimeException()).when(service).create(any());
 
             mockMvc.perform(post("/recipes")
-                            .contentType(MediaType.APPLICATION_JSON)
+                            .contentType(MediaType.APPLICATION_JSON_VALUE)
                             .content(toJsonString(postRecipe)))
 
                     .andExpect(status().isInternalServerError());
@@ -187,25 +187,28 @@ public class RecipeControllerTest {
     @Nested
     @DisplayName("GET /recipes")
     class TestGetRecipes {
+        final Long mockIngredientId1 = 1L;
+        final Long mockIngredientId2 = 2L;
+        final Long mockIngredientId3 = 3L;
         final String mockIngredientName1 = "test ingredient 1";
         final String mockIngredientName2 = "test ingredient 2";
         final String mockIngredientName3 = "test ingredient 3";
-        final Long mockId1 = 1L;
+        final Long mockRecipeId1 = 1L;
         final String mockRecipeName1 = "test ingredient 1";
         final boolean mockIsVegetarian1 = true;
         final Short mockNumOfServings1 = 2;
         final String mockInstructions1 = "test 1 instructions";
-        final Long mockId2 = 2L;
+        final Long mockRecipeId2 = 2L;
         final String mockRecipeName2 = "test ingredient 2";
         final boolean mockIsVegetarian2 = true;
         final Short mockNumOfServings2 = 3;
         final String mockInstructions2 = "test 2 instructions";
 
-        List<Ingredient> mockIngredients1 = Arrays.asList(
-                new Ingredient(mockIngredientName1),
-                new Ingredient(mockIngredientName2));
+        List<Ingredient> mockIngredients1 = List.of(
+                new Ingredient(mockIngredientId1, mockIngredientName1),
+                new Ingredient(mockIngredientId2, mockIngredientName2));
 
-        Recipe mockRecipe1 = new Recipe(mockId1,
+        Recipe mockRecipe1 = new Recipe(mockRecipeId1,
                 mockRecipeName1,
                 mockIsVegetarian1,
                 mockNumOfServings1,
@@ -214,10 +217,10 @@ public class RecipeControllerTest {
                 mockCurrentTime);
 
         List<Ingredient> mockIngredients2 = List.of(
-                new Ingredient(mockIngredientName3)
+                new Ingredient(mockIngredientId3, mockIngredientName3)
         );
 
-        Recipe mockRecipe2 = new Recipe(mockId2,
+        Recipe mockRecipe2 = new Recipe(mockRecipeId2,
                 mockRecipeName2,
                 mockIsVegetarian2,
                 mockNumOfServings2,
@@ -225,15 +228,12 @@ public class RecipeControllerTest {
                 mockIngredients2,
                 mockCurrentTime);
 
-        List<Recipe> mockRecipes = Arrays.asList(mockRecipe1,mockRecipe2);
+        List<Recipe> mockRecipes = List.of(mockRecipe1,mockRecipe2);
 
 
         @Test
         @DisplayName("return 200 ok and the recipes if there is any recipe")
         void testGetRecipesSuccess() throws Exception {
-
-
-            // Set up mocked service
             doReturn(mockRecipes).when(service).search(any());
 
             mockMvc.perform(get("/recipes"))
@@ -242,7 +242,7 @@ public class RecipeControllerTest {
                     .andExpect(content().contentType(MediaType.APPLICATION_JSON_VALUE))
                     .andExpect(jsonPath("$").isArray())
                     .andExpect(jsonPath("$", hasSize(2)))
-                    .andExpect(jsonPath("$[0].id", is(mockId1.intValue())))
+                    .andExpect(jsonPath("$[0].id", is(mockRecipeId1.intValue())))
                     .andExpect(jsonPath("$[0].recipeName", is(mockRecipeName1)))
                     .andExpect(jsonPath("$[0].isVegetarian", is(mockIsVegetarian1)))
                     .andExpect(jsonPath("$[0].numOfServings", is(mockNumOfServings1.intValue())))
@@ -251,7 +251,7 @@ public class RecipeControllerTest {
                     .andExpect(jsonPath("$[0].ingredients[0].ingredientName", is(mockIngredientName1)))
                     .andExpect(jsonPath("$[0].ingredients[1].ingredientName", is(mockIngredientName2)))
                     .andExpect(jsonPath("$[0].modifiedTime", is(mockCurrentDateTimeString)))
-                    .andExpect(jsonPath("$[1].id", is(mockId2.intValue())))
+                    .andExpect(jsonPath("$[1].id", is(mockRecipeId2.intValue())))
                     .andExpect(jsonPath("$[1].recipeName", is(mockRecipeName2)))
                     .andExpect(jsonPath("$[1].isVegetarian", is(mockIsVegetarian2)))
                     .andExpect(jsonPath("$[1].numOfServings", is(mockNumOfServings2.intValue())))
@@ -264,7 +264,6 @@ public class RecipeControllerTest {
         @Test
         @DisplayName("return 200 ok and an empty array if there is no recipe")
         void testGetRecipesEmpty() throws Exception {
-            // Set up mocked service
             doReturn(Collections.emptyList()).when(service).search(any());
 
             mockMvc.perform(get("/recipes"))
@@ -278,7 +277,6 @@ public class RecipeControllerTest {
         @Test
         @DisplayName("return 200 ok if isVegetarian is set")
         void testSearchRecipeIsVegetarian() throws Exception {
-            // Set up mocked service
             doReturn(mockRecipes).when(service).search(any());
 
             mockMvc.perform(get("/recipes?isVegetarian="+mockIsVegetarian1))
@@ -291,7 +289,6 @@ public class RecipeControllerTest {
         @Test
         @DisplayName("return 200 ok if numOfServings is set")
         void testSearchRecipeNumOfServings() throws Exception {
-            // Set up mocked service
             doReturn(mockRecipes).when(service).search(any());
 
             mockMvc.perform(get("/recipes?numOfServings="+mockNumOfServings1))
@@ -304,7 +301,6 @@ public class RecipeControllerTest {
         @Test
         @DisplayName("return 200 ok if includedIngredients is set")
         void testSearchRecipeIncludeIngredients() throws Exception {
-            // Set up mocked service
             doReturn(mockRecipes).when(service).search(any());
 
             mockMvc.perform(get("/recipes?includedIngredients="+mockIngredientName1+","+mockIngredientName2))
@@ -317,7 +313,6 @@ public class RecipeControllerTest {
         @Test
         @DisplayName("return 200 ok if excludedIngredients is set")
         void testSearchRecipeExcludeIngredients() throws Exception {
-            // Set up mocked service
             doReturn(mockRecipes).when(service).search(any());
 
             mockMvc.perform(get("/recipes?excludedIngredients="+mockIngredientName1+","+mockIngredientName2))
@@ -330,7 +325,6 @@ public class RecipeControllerTest {
         @Test
         @DisplayName("return 200 ok if instructionsContain is set")
         void testSearchRecipeInstructionsContain() throws Exception {
-            // Set up mocked service
             doReturn(mockRecipes).when(service).search(any());
 
             mockMvc.perform(get("/recipes?instructionsContain=test"))
@@ -343,7 +337,6 @@ public class RecipeControllerTest {
         @Test
         @DisplayName("return 200 ok if unexpected query string is set")
         void testSearchRecipeUnknownQueryString() throws Exception {
-            // Set up mocked service
             doReturn(mockRecipes).when(service).search(any());
 
             mockMvc.perform(get("/recipes?unknownQueryString=test"))
@@ -356,7 +349,7 @@ public class RecipeControllerTest {
         @Test
         @DisplayName("return 500 error if retrieval of recipe failed")
         void testGetRecipesFail() throws Exception {
-            // Set up mocked service
+
             doThrow(new RuntimeException()).when(service).search(any());
 
             mockMvc.perform(get("/recipes"))
@@ -364,46 +357,30 @@ public class RecipeControllerTest {
         }
     }
 
-    @Nested
-    @DisplayName("GET /recipes/search")
-    class TestSearchRecipes {
-        final String mockIngredientName1 = "test ingredient 1";
-        final String mockIngredientName2 = "test ingredient 2";
-        final Long mockId = 1L;
-        final String mockRecipeName = "test ingredient 1";
-        final boolean mockIsVegetarian = true;
-        final Short mockNumOfServings = 2;
-        final String mockInstructions = "test 1 instructions";
-
-        List<Ingredient> mockIngredients = Arrays.asList( new Ingredient(mockIngredientName1),new Ingredient(mockIngredientName2));
-        Recipe mockRecipe = new Recipe(mockId, mockRecipeName, mockIsVegetarian,  mockNumOfServings,
-                mockInstructions, mockIngredients,  mockCurrentTime);
-
-
-
-    }
 
     @Nested
     @DisplayName("PATCH /recipes/{id}")
     class TestUpdateRecipe {
+        final Long mockIngredientId1 = 1L;
+        final Long mockIngredientId2 = 2L;
         final String mockIngredientName1 = "test ingredient 1";
         final String mockIngredientName2 = "test ingredient 2";
-        final Long mockId = 1L;
+        final Long mockRecipeId = 1L;
         final String mockRecipeName = "test ingredient 1";
         final boolean mockIsVegetarian = true;
         final Short mockNumOfServings = 2;
         final String mockInstructions = "test 1 instructions";
 
-        List<Ingredient> patchIngredients = Arrays.asList(
-                new Ingredient(mockIngredientName1),
-                new Ingredient(mockIngredientName2));
+        List<Ingredient> patchIngredients = List.of(
+                new Ingredient(mockIngredientId1, mockIngredientName1),
+                new Ingredient(mockIngredientId2, mockIngredientName2));
         Recipe patchRecipe = new Recipe( mockRecipeName, mockIsVegetarian,
                 mockNumOfServings, mockInstructions, patchIngredients);
 
-        List<Ingredient> mockIngredients = Arrays.asList(
-                new Ingredient(mockIngredientName1),
-                new Ingredient(mockIngredientName2));
-        Recipe mockRecipe = new Recipe(mockId, mockRecipeName, mockIsVegetarian,  mockNumOfServings,
+        List<Ingredient> mockIngredients = List.of(
+                new Ingredient(mockIngredientId1, mockIngredientName1),
+                new Ingredient(mockIngredientId2, mockIngredientName2));
+        Recipe mockRecipe = new Recipe(mockRecipeId, mockRecipeName, mockIsVegetarian,  mockNumOfServings,
                 mockInstructions, mockIngredients,  mockCurrentTime);
 
         @Test
@@ -411,19 +388,17 @@ public class RecipeControllerTest {
         void testUpdateRecipesSuccess() throws Exception {
 
 
-
-            // Set up mocked service
-            doReturn(Optional.of(mockRecipe)).when(service).findById(mockId);
+            doReturn(Optional.of(mockRecipe)).when(service).findById(mockRecipeId);
             doReturn(mockRecipe).when(service).update(any());
 
-            mockMvc.perform(patch("/recipes/{id}", mockId)
+            mockMvc.perform(patch("/recipes/{id}", mockRecipeId)
                             .contentType(MediaType.APPLICATION_JSON_VALUE)
                             .content(toJsonString(patchRecipe)))
 
                     .andExpect(status().isOk())
                     .andExpect(content().contentType(MediaType.APPLICATION_JSON_VALUE))
 
-                    .andExpect(jsonPath("$.id", is(mockId.intValue())))
+                    .andExpect(jsonPath("$.id", is(mockRecipeId.intValue())))
                     .andExpect(jsonPath("$.recipeName", is(mockRecipeName)))
                     .andExpect(jsonPath("$.isVegetarian", is(mockIsVegetarian)))
                     .andExpect(jsonPath("$.numOfServings", is(mockNumOfServings.intValue())))
@@ -438,11 +413,11 @@ public class RecipeControllerTest {
         @DisplayName("return 404 error if the recipe was not found")
         void testRecipePatchNotFound() throws Exception {
 
-            // Set up mocked service
-            doReturn(Optional.empty()).when(service).findById(mockId);
+
+            doReturn(Optional.empty()).when(service).findById(mockRecipeId);
             doReturn(mockRecipe).when(service).update(any());
 
-            mockMvc.perform(patch("/recipes/{id}", mockId)
+            mockMvc.perform(patch("/recipes/{id}", mockRecipeId)
                             .contentType(MediaType.APPLICATION_JSON_VALUE)
                             .content(toJsonString(patchRecipe)))
 
@@ -451,14 +426,11 @@ public class RecipeControllerTest {
 
         @Test
         @DisplayName("return 500 error if the update failed")
-        void testProductDeleteFailure() throws Exception {
-
-            // Set up the mocked service
-            doReturn(Optional.of(mockRecipe)).when(service).findById(mockId);
+        void testRecipeDeleteFailure() throws Exception {
+            doReturn(Optional.of(mockRecipe)).when(service).findById(mockRecipeId);
             doThrow(new RuntimeException()).when(service).update(any());
 
-            // Execute our DELETE request
-            mockMvc.perform(patch("/recipes/{id}", mockId))
+            mockMvc.perform(patch("/recipes/{id}", mockRecipeId))
                     .andExpect(status().isInternalServerError());
         }
     }
@@ -466,62 +438,51 @@ public class RecipeControllerTest {
     @Nested
     @DisplayName("DELETE /recipes/{id}")
     class TestDeleteRecipe {
+        final Long mockIngredientId1 = 1L;
+        final Long mockIngredientId2 = 2L;
         final String mockIngredientName1 = "test ingredient 1";
         final String mockIngredientName2 = "test ingredient 2";
-        final Long mockId = 1L;
+        final Long mockRecipeId = 1L;
         final String mockRecipeName = "test ingredient 1";
         final boolean mockIsVegetarian = true;
         final Short mockNumOfServings = 2;
         final String mockInstructions = "test 1 instructions";
 
+        List<Ingredient> mockIngredients = List.of(
+                new Ingredient(mockIngredientId1, mockIngredientName1),
+                new Ingredient(mockIngredientId2, mockIngredientName2));
+        Recipe mockRecipe = new Recipe(mockRecipeId, mockRecipeName, mockIsVegetarian,  mockNumOfServings,
+                mockInstructions, mockIngredients,  mockCurrentTime);
+
         @Test
         @DisplayName("return 200 ok if deletion succeeded")
         void testRecipeDeleteSuccess() throws Exception {
-            List<Ingredient> mockIngredients = Arrays.asList( new Ingredient(mockIngredientName1),new Ingredient(mockIngredientName2));
-            Recipe mockRecipe = new Recipe(mockId, mockRecipeName, mockIsVegetarian,  mockNumOfServings,
-                    mockInstructions, mockIngredients,  mockCurrentTime);
 
-            // Set up the mocked service
-            doReturn(Optional.of(mockRecipe)).when(service).findById(mockId);
-            doNothing().when(service).deleteById(mockId);
+            doReturn(Optional.of(mockRecipe)).when(service).findById(mockRecipeId);
+            doNothing().when(service).deleteById(mockRecipeId);
 
-            mockMvc.perform(delete("/recipes/{id}", mockId))
+            mockMvc.perform(delete("/recipes/{id}", mockRecipeId))
                     .andExpect(status().isOk());
         }
 
         @Test
         @DisplayName("return 404 error if the recipe was not found")
         void testRecipeDeleteNotFound() throws Exception {
-            // Set up the mocked service
-            doReturn(Optional.empty()).when(service).findById(mockId);
+            doReturn(Optional.empty()).when(service).findById(mockRecipeId);
 
-            // Execute our DELETE request
-            mockMvc.perform(delete("/recipes/{id}", mockId))
+            mockMvc.perform(delete("/recipes/{id}", mockRecipeId))
                     .andExpect(status().isNotFound());
         }
 
         @Test
         @DisplayName("return 500 error if the deletion failed")
-        void testProductDeleteFailure() throws Exception {
-            List<Ingredient> mockIngredients = Arrays.asList( new Ingredient(mockIngredientName1),new Ingredient(mockIngredientName2));
-            Recipe mockRecipe = new Recipe(mockId, mockRecipeName, mockIsVegetarian,  mockNumOfServings,
-                    mockInstructions, mockIngredients,  mockCurrentTime);
+        void testRecipeDeleteFailure() throws Exception {
 
-            // Set up the mocked service
-            doReturn(Optional.of(mockRecipe)).when(service).findById(mockId);
+            doReturn(Optional.of(mockRecipe)).when(service).findById(mockRecipeId);
             doThrow(new RuntimeException()).when(service).deleteById(any());
 
-            // Execute our DELETE request
-            mockMvc.perform(delete("/recipes/{id}", mockId))
+            mockMvc.perform(delete("/recipes/{id}", mockRecipeId))
                     .andExpect(status().isInternalServerError());
-        }
-    }
-
-    static String toJsonString(final Object obj) {
-        try {
-            return new ObjectMapper().writeValueAsString(obj);
-        } catch (Exception e) {
-            throw new RuntimeException(e);
         }
     }
 
